objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Qualifications__c</fullName>
        <label>Qualifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>360F</fullName>
                </value>
                <value>
                    <fullName>A&amp;DC</fullName>
                </value>
                <value>
                    <fullName>ASST</fullName>
                </value>
                <value>
                    <fullName>CBI</fullName>
                </value>
                <value>
                    <fullName>CBITTT</fullName>
                </value>
                <value>
                    <fullName>DHPT</fullName>
                </value>
                <value>
                    <fullName>Div&amp;Dis</fullName>
                </value>
                <value>
                    <fullName>JACD</fullName>
                </value>
                <value>
                    <fullName>M-PERF</fullName>
                </value>
                <value>
                    <fullName>MQ</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>OPQ</fullName>
                </value>
                <value>
                    <fullName>OPQ Re-Cert</fullName>
                </value>
                <value>
                    <fullName>OT</fullName>
                </value>
                <value>
                    <fullName>PAA-Light</fullName>
                </value>
                <value>
                    <fullName>TA</fullName>
                </value>
                <value>
                    <fullName>ATP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <description>New Registration Number for all contacts whether trained or not. Legacy Number will be the number some individuals will quote</description>
        <displayFormat>{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>Contact Reference</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Registration_Number_legacy__c</fullName>
        <label>Registration Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAT__c</fullName>
        <label>ATP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC2SUN_TransferStatus__c</fullName>
        <description>It indicates the Contact status whether it has been transferred to Sun or not.</description>
        <inlineHelpText>The Status of Contact’s Transfer in Sun</inlineHelpText>
        <label>SFDC2SUN: Transfer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Transferred</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Ready for Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC2SUN_TransferredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates the salesforce.com user who transferred the Contact in Sun Systems</description>
        <inlineHelpText>Contact transferred by the user.</inlineHelpText>
        <label>SFDC2SUN: Transferred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Same_As_The_Account_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this option is selected, then the Contact Mailing Address is copied from the Account Billing Address.</description>
        <inlineHelpText>Check this box to set the Contact Address to the same as the Account Billing Address. This address will not be populated from the Account until you hit Save. You must ensure this box is not ticked if you want to enter a different address for the Contact.</inlineHelpText>
        <label>Same As The Account Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Soda__c</fullName>
        <description>Soda training date</description>
        <label>System Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject_Discussed__c</fullName>
        <label>Subject Discussed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_admin_training_date__c</fullName>
        <description>Test admin training date</description>
        <label>Test Admin (TA)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X360__c</fullName>
        <description>360 training course</description>
        <label>360</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>is_Root_Level_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a field used at the backend for Account Planning to build the heirarchy.SSE-21273</description>
        <label>Top Level Contact</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>